create github pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ebN9kn"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ebN9kn" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=5iK6Wo"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=5iK6Wo" type="text/css">
 
   
   
@@ -96,7 +96,7 @@
 					</li></ul>
 			</div>
 			<div class="menu-content-right">
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="#">Offerte Aanvragen</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="page3.html">Offerte Aanvragen</a></div>
 			</div>
 			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -282,6 +282,28 @@
 		</div>
 	</div>
 </section>
+
+<div id="custom-html-12"><!-- Type valid HTML here -->
+<div id="wid_1719583184779"></div>
+<script>
+sc = document.createElement("script");
+sc.setAttribute("defer",true);
+sc.setAttribute("src","https://dbwx2z9xa7qt9.cloudfront.net/bundle.js?cachebust=1719583184779");
+sc.setAttribute("theme","light");
+sc.setAttribute("footer", "true"); 
+sc.setAttribute("widget-type","carousel");
+sc.setAttribute("token","64c112778268556b04fd9e42");
+sc.setAttribute('apiurl', "https://server.onlinereviews.tech/api/v0.0.9");
+sc.setAttribute('stats',"true");
+sc.setAttribute('addReview',"true");
+sc.setAttribute('profile-pic',"true");
+sc.setAttribute('review-name',"true");
+sc.setAttribute('wl', "true");
+sc.setAttribute('wlndig', "https://go.reviewchicken.com/cleanpowerrr");
+sc.setAttribute('lang', "nl");
+sc.setAttribute('brandStyle', "%7B%22sidebar_background%22%3A%22%237231BE%22%2C%22sidebar_text%22%3A%22white%22%2C%22brand_button_text_color%22%3A%22white%22%2C%22brand_main_color%22%3A%22%23EE882D%22%2C%22brand_button_border_radius%22%3A%2216px%22%2C%22brand_sidebar_text_color_opacity%22%3A%22%23ffffff1a%22%2C%22brand_button_hover%22%3A%22rgb(241%2C%20158%2C%2084)%22%2C%22brand_button_active%22%3A%22rgb(223%2C%20114%2C%2018)%22%2C%22brand_main_color_opacity%22%3A%22%23EE882D1a%22%2C%22brand_font%22%3A%22Montserrat%22%2C%22star_color%22%3A%22%23EE882D%22%2C%22brand_main_background%22%3A%22%23FBF8F6%22%2C%22brand_card_background%22%3A%22white%22%2C%22poweredByLink%22%3A%22https%3A%2F%2Freviewchicken.com%22%2C%22poweredicon%22%3A%22https%3A%2F%2Frecensioni-io-static-folder.s3.eu-central-1.amazonaws.com%2Fpublic_onlinereviews%2Freviews.reviewchicken.com%2Fpowered.png%22%7D");
+document.getElementById("wid_1719583184779").appendChild(sc);
+</script></div>
 
 <section class="title2 cleanm4_title2 cid-ugakfinPnZ" id="title2-a">
 
@@ -513,7 +535,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kplICn/DcT42ECdDPcrPjdc3GXtBz79w5dvLNRiGsUQSIp5zTjkqJIrZrq9rJKCy5N26isbXzhH6BquNBBFm9aW7nm9Ta2J4jXokBrswlhrd2ixme6tfnCqpMXDPiOnq.2UaHb64JYyhGVMAQZzAhWW4UnSnmc0yc5+gqFSd7+eIqBladtGNAsdAc7PLLFutsLBg4u7rNVAjB2vhM1ns/5UgQ/1BGWyNzxwtuvqPYCqA4vPxCrjSqaty8sKeKnY/z">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bLvDTHeQ+8P/UqQa+m6FsyYWtpQL0PucD10eVoALCh2Jvnfmzpj3PRkQ04uXehaiCsYuOHRUnQ2SV+rHQrLlFrFZvvuJyi9wDp1wjdrHV2vLM58sOFAoclc0eAc8aLYl.F6/rwwNPGgpn3klxg9OA/T3sR8LvGJ0/mDnq6SEaHSF9IQ4xhyqv0U4PpX6Kyu1rlkC10ldVVpAWPB6qYrg9/kS1Cjnz2dpNDZ4zPtW+7oUJb/rnr7gDpsVuhIUDKoH/">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
