--- a/page2.html
+++ b/page2.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=FbFD9Z"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=FbFD9Z" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=saANYz"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=saANYz" type="text/css">
 
   
   
@@ -94,7 +94,7 @@
 					</li></ul>
 			</div>
 			<div class="menu-content-right">
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="#">Offerte Aanvragen</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="page3.html">Offerte Aanvragen</a></div>
 			</div>
 			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -133,7 +133,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="eHiB2bVW+/YDXK4KbGS7nVjYBIbVcRw9LKmnf4DKD7QfwuVP2J/P0B8kG3pFWHM+FSeAkTPZjM9h9MdjYO3NB4GhfSLf5Q2riB68kVGNmeenWxGlgKIiDgdj4qCmhR01.fOKyxcMhccfpjeUEDsspJm+UHDgsJ8uhU8tkKqTCn/o4JXtPISO2IRzp3gGNpmnDzF8OFidwq4Xs3VcOPqYRh5HGX5gjiUIzqgMNDn2hLnKRstTZYKG1+CMYOO2bartp">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Tb3/bKwbCFRgxzNtTCFxMkG5cM0t933mFxWZv+GKw/mVI2QFmWLrmbiHC6hS1RZtYEYmjzyWuclID+njHmzkvIlQc/k8er97H4t2AGyyDXIFG1qdkC581fatyQz7dAst.oCc7PmfTh/QT7Fav9kiQMe1wHWXgbcbuqSzEZ+o//2miQacAn6QCMelxfvhj5GFvIiW2YCr0ZbM5hK/wX8ejjdlOU85XZqD6BnAZZZ4hyUcnJn9qohoc+Y9Y08E0Q2f4">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor de aanvraag!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
