--- a/page3.html
+++ b/page3.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=XlANr8"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=XlANr8" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ki5Zqs"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ki5Zqs" type="text/css">
 
   
   
@@ -94,7 +94,7 @@
 					</li></ul>
 			</div>
 			<div class="menu-content-right">
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="#">Offerte Aanvragen</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="page3.html">Offerte Aanvragen</a></div>
 			</div>
 			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -175,7 +175,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="wz63mpB8DAmdz4jbQ+PXk5aeIhViVXgf7DXlKsyH0kkCO3ASp0/+MP3VAHv1fp8z79DQW55l4mDYymKGrJcUafs4pma2YxdzPJHf9UPuKE2u5c2KpFEFwqME456Esp4e.Ix3BZ0HLTud/+gNzZphgBjT8Wm2BmqonF3QF6p1TPILTqY14dw3Y4ilM3Nc9HP6rZun3UOPwTrsPvtLQIJu9orpmF3RlghdCkpSSbrTrLRdAJr7jaQWx3KbSNrcNkO9p">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="FJDadHnmYi1oCW/fXRHRo3u3JJfewSr0j1vfwl7jZkdArWKsXtIDWUZbkPeo97g/GX/aUym0oLoN8u7W9cUt44zZQ/9Kh3MJdYq5+CIY3gbTHC1b2ytqeLlCt0YWjUN1.4/G96MXJ0235e4w5sPXmM4HQv0IJiGCOSRsVsERsDFWtyXlYE57Dv2PWsfjbz2KFuONMKxKQeWc2r1565rS9DyWuXLHowtgsLbr2yrgEPyHyIape5237FsZlVRH2+YL4">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor de aanvraag!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
