create github pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=6gwdAR"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=6gwdAR" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=vj2Awi"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=vj2Awi" type="text/css">
 
   
   
@@ -139,14 +139,14 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/med-e439a561-gevelreiniging-666x500.webp" alt="" title="">
+                        <a href="page1.html"><img src="assets/images/med-e439a561-gevelreiniging-666x500.webp" alt="" title=""></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Gevelreiniging</strong></h5>
                         
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Binnen een mum van tijd maken wij jouw gevels weer schoon.</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black-outline display-7" target="_blank">meer info</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="page1.html" class="btn item-btn btn-black-outline display-7" target="_blank">meer info</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-4">
@@ -324,7 +324,7 @@ document.getElementById("wid_1719583184779").appendChild(sc);
 					<div class="right-content">
 						
 						<div class="buttons-wrap w-100">
-							<div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="#">Offerte</a></div>
+							<div class="mbr-section-btn align-center"><a class="btn btn-md btn-white display-4" href="page3.html">Offerte</a></div>
 						</div>
 					</div>
 
@@ -535,7 +535,7 @@ document.getElementById("wid_1719583184779").appendChild(sc);
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="b15Qq+BnyyeNJCAYSSfciR9/P5/yxsFHgpfwbOyEaj9+LhMZ+fyP2AeoUINbSVuGuVC7jFp60+g+pJQYC3xgjui5P/vymKNm39ohfn7RIAn1xBVA9cjYkDWonsfYr3CY.r04QLKdC0GciY2Y5O79jUQiKzoGZW9nH3nltS+XXLJCKEwwf4n1rXyvxTsVqvizBGhgqZEjbPvaG7haqJatXYKaz1JIipkUGQlqiJvEZS8abAJygrMJYRFaPcLLxuUid">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="70hypT/mtiv38RuS2K0npUvaL9sCMS8QIaYo5KcsJbagzNsEfvO10xirNsKW59JxSHjWDd/pQcWdHniheROKLCApO0PyXdQtLxDfHVSuRj3Lo2mw+ELbEwR1SmY16W3L.HBHYKQZfnh5fdfFzLlMZTUgZ/sGQFRXqTX6eNt7c3+pkjTx75xZwPB8uWdDHxWI62ZYu23GA100rSF81FxcK8ray38vcXFOAjdJAD10MvgsX2WQzL0B5tZ383/j3NiM3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
