--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/mbr-favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/logo-allinone-420x139.jpg" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -20,16 +20,16 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
   <link rel="stylesheet" href="assets/smart-cart/minicart-theme.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
   <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=vj2Awi"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=vj2Awi" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=mO7JoB"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=mO7JoB" type="text/css">
 
   
   
@@ -37,7 +37,7 @@
 </head>
 <body>
   
-  <section class="menu2 cleanm4_menu2 menu cid-ugBaPk6FvH" once="menu" id="menu2-c">
+  <section class="menu2 cleanm4_menu2 menu cid-uh0fk0aInj" once="menu" id="menu2-1d">
 
 	
 
@@ -78,16 +78,13 @@
 				<ul class="navbar-nav nav-dropdown js-float-line" data-app-modern-menu="true"><li class="nav-item dropdown">
 						<a class="nav-link link dropdown-toggle text-primary display-7" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Diensten</a>
 						<div class="dropdown-menu">
-							<a class="dropdown-item text-primary display-7" href="#">Gevelreiniging</a>
+							<a class="dropdown-item text-primary display-7" href="page1.html">Gevelreiniging</a>
 							<a class="dropdown-item text-primary display-7" href="#" aria-expanded="false">Glasbewassing</a>
 							<a class="dropdown-item text-primary display-7" href="#" aria-expanded="false">Trespa reiniging<br></a>
 						</div>
 					</li>
 					
-					<li class="nav-item">
-						<a class="nav-link link text-primary display-7" href="#">
-							Prijzen</a>
-					</li>
+					
 					<li class="nav-item">
 						<a class="nav-link link text-primary display-7" href="index.html#header3-1">Over Ons</a>
 					</li>
@@ -96,7 +93,7 @@
 					</li></ul>
 			</div>
 			<div class="menu-content-right">
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="page3.html">Offerte Aanvragen</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="#">Offerte Aanvragen</a></div>
 			</div>
 			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -535,7 +532,7 @@ document.getElementById("wid_1719583184779").appendChild(sc);
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="70hypT/mtiv38RuS2K0npUvaL9sCMS8QIaYo5KcsJbagzNsEfvO10xirNsKW59JxSHjWDd/pQcWdHniheROKLCApO0PyXdQtLxDfHVSuRj3Lo2mw+ELbEwR1SmY16W3L.HBHYKQZfnh5fdfFzLlMZTUgZ/sGQFRXqTX6eNt7c3+pkjTx75xZwPB8uWdDHxWI62ZYu23GA100rSF81FxcK8ray38vcXFOAjdJAD10MvgsX2WQzL0B5tZ383/j3NiM3">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OgZkPxHttB1nND0/a/WkQjWBiDUPyzADvtwgMAur7ACpZykundgdxjITxYk9WlnabCnv0AwNDIXZEB35Xqv7M7pvjGpiG9zNe9hm2SUNhBih/eISnIwqHnhth1EOVgHl.sU6YEQIWVJo+jekv4uwQrWePpT9zrWZePocmrHjwdsKiBk5b/8AKqnN0/iw9ivxII33XG4XiFh06Rn3OJST7P6hjRL7P08VKaQZu2F2SdP8Zt0mcPXz6LIBIqkwiGMgf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -625,14 +622,14 @@ document.getElementById("wid_1719583184779").appendChild(sc);
   <script src="assets/chatbutton/script.js"></script>
   <script src="assets/smart-cart/minicart.js"></script>
   <script src="assets/smart-cart/minicart-customizer.js"></script>
-  <script src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/ytplayer/index.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/formstyler/jquery.formstyler.min.js"></script>
   <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>
+  <script src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid.min.js"></script>
   
