create github pages

--- a/page3.html
+++ b/page3.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=v1zhIT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=v1zhIT" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=TDAesq"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=TDAesq" type="text/css">
 
   
   
@@ -65,7 +65,7 @@
 			<div class="menu-logo">
 				<div class="navbar-brand">
 					<span class="navbar-logo">
-						<a href="#">
+						<a href="index.html">
 							<img src="assets/images/logo-allinone-420x139.webp" alt="" style="height: 4rem;">
 						</a>
 					</span>
@@ -150,7 +150,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OTXGQOtsQ+zC8QOE+BftPZ06VJgORpm/RPpQ4+JBHgm7LXmpPRWG2YEHEpCwuty/NkMRqZzXIbzmsdMUKIqz2N58OUgRCGCX2w2VJYZkkZMuySlSes5trSkqKN4BEJBz.r5KqX3PtkMxlFdG/p6ZPNavVpW+mfeE2vjegQ/7Y0hvPjPRjbAZQSaONhncBx9U0zydNHUNOtIpXb1nTgS07xKOZuxkKAsA3XNjtCbLaXN1Bf1D+HV6xZ8DlCWz3XLRN">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="lnRcIT0hLhCly5HujhK2E6V6TZABgWhcQx3+7ogg9ucXAao8UCuFHCh0kEvS8/hRURLYw6fZ/qN/BCUUTZA9xxRs4OJvoQtOp5yYNWNtGhFTxsuFf3niC2CeQ9QcnCbz.5XnLVDzcSzHraxe0TeUdjlQ2isPKWcX38O3r4XEfTjjRGJ1jaCE60h5XgLZ21X2xeTSmTtgQExNEFhJhULlg5d3dNj9w5snuKFgMcSgnMOUjyftIGdrm6JG7341N6+IH">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor de aanvraag!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
