--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=mO7JoB"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=mO7JoB" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=JXNaMW"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=JXNaMW" type="text/css">
 
   
   
@@ -67,7 +67,7 @@
 			<div class="menu-logo">
 				<div class="navbar-brand">
 					<span class="navbar-logo">
-						<a href="#">
+						<a href="index.html">
 							<img src="assets/images/logo-allinone-420x139.webp" alt="" style="height: 4rem;">
 						</a>
 					</span>
@@ -532,7 +532,7 @@ document.getElementById("wid_1719583184779").appendChild(sc);
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OgZkPxHttB1nND0/a/WkQjWBiDUPyzADvtwgMAur7ACpZykundgdxjITxYk9WlnabCnv0AwNDIXZEB35Xqv7M7pvjGpiG9zNe9hm2SUNhBih/eISnIwqHnhth1EOVgHl.sU6YEQIWVJo+jekv4uwQrWePpT9zrWZePocmrHjwdsKiBk5b/8AKqnN0/iw9ivxII33XG4XiFh06Rn3OJST7P6hjRL7P08VKaQZu2F2SdP8Zt0mcPXz6LIBIqkwiGMgf">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sovgcKk5HH63iumxtiYpwLDqMIXGBWSFyaYKPKWysZWJiX2x16KKTYQ36SHHuklM+/B6/foGFMMcZbJCRvjnfV2N4NtYrM0ZRBbAmNSzPTaMvyUSg6QMwXcGxZPp1BZm.VOAVkhvZwRhL5r7orEp6nEkKy3prMrLJ5gdVOJ0r+jphjULr4bx2QkCKP4D6oY3txIq35mBmPRquq3Z9+UAHWx/Eyt3Hk37n8ObZnFgjp7Nr61GPV4YYIgwnvT2XEPpN">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
