create github pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=JXNaMW"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=JXNaMW" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=YLAYHB"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=YLAYHB" type="text/css">
 
   
   
@@ -228,10 +228,7 @@
 					<h1 class="mbr-section-title mbr-fonts-style mbr-bold display-2">Professioneel schoonmaakbedrijf.</h1>
 					
 					<h4 class="mbr-text mbr-fonts-style mbr-regular mb-4 display-7">All in One Cleaning, jouw betrouwbare partner voor grondige reiniging zonder het gebruik van hogedruk of stroom. Wij maken gebruik van milieuvriendelijke methoden die zorgen voor een stralend schoon resultaat zonder schade aan oppervlakken of energieverbruik. Kies voor een duurzame en effectieve schoonmaakoplossing met All in One Cleaning.</h4>
-					<div class="mbr-section-btn align-left">
-						<a class="btn btn-lg btn-success display-4" href="#">
-							Read More</a>
-					</div>
+					
 				</div>
 			</div>
 			<div class="col-lg-4">
@@ -532,7 +529,7 @@ document.getElementById("wid_1719583184779").appendChild(sc);
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sovgcKk5HH63iumxtiYpwLDqMIXGBWSFyaYKPKWysZWJiX2x16KKTYQ36SHHuklM+/B6/foGFMMcZbJCRvjnfV2N4NtYrM0ZRBbAmNSzPTaMvyUSg6QMwXcGxZPp1BZm.VOAVkhvZwRhL5r7orEp6nEkKy3prMrLJ5gdVOJ0r+jphjULr4bx2QkCKP4D6oY3txIq35mBmPRquq3Z9+UAHWx/Eyt3Hk37n8ObZnFgjp7Nr61GPV4YYIgwnvT2XEPpN">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2S2kSMsHgIBJejpkm/SR/GE+7WXFI05V3yeDZKmyjLA3i54tok4Ts0VrKe3JIZOzfs3aQTa7ms8IjAkiJ4CySLXAodelZsd7ldp3YFJNL/7IgI6Y0QTl0qkRSpkddCGv.v65nsb2/Tl3AAKisd1wC81jYEvt/UZY0giPMb1izkj+xOc/mKEr9e8gPE2i7MDP+EoBQuM8E7JDTuhQVlCnksQYCCNSgdkuWXaoD1/gqB2eshD/TX2dwmlHhsYt0fwKl">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
